Implemented both the tooltip close button functionality as well as text wrapping for the card previews

--- a/Threat_Timeline/appserver/static/visualizations/threat_Timeline/visualization.css
+++ b/Threat_Timeline/appserver/static/visualizations/threat_Timeline/visualization.css
@@ -24,6 +24,14 @@
 	
 }
 
+.closeButton-form{
+	font-size: 18px;
+	font-family: monospace;
+	color:black;
+	font-weight: bold;
+
+}
+
 
 /*.meter-center-text {
     font-size: 40px;
